HAPPY-4577 Rugwani - Discharge summary & Admit Card